kikker/deploys/istio/rating/networking/destination-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rating
spec:
  host: rating
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
#RANDOM, LEAST_CONN
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
