kikker/deploys/istio/rating/networking/virtual-service-all-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rating
spec:
  hosts:
  - rating
  http:
  - route:
    - destination:
        host: rating
        subset: v2
