kikker/deploys/istio/rating/networking/virtual-service-v1-75.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rating-v1-75pc
spec:
  hosts:
    - rating
  http:
  - route:
    - destination:
        host: rating
        subset: v1
      weight: 75
    - destination:
        host: rating
        subset: v2
      weight: 25
